# rs-arrow-ipc-stream-head

./: Cargo.toml  README.md  arrow-ipc-stream-head  arrow-ipc-stream-head.wasm  build.sh  example.sh  tmp.file.ipc  wasi.sh
src/: lib.rs
